--- a/blog-search-api/src/main/resources/application.yaml
+++ b/blog-search-api/src/main/resources/application.yaml
@@ -1,1 +1,11 @@
+server:
+  port: 8080
+  tomcat:
+    uri-encoding: UTF-8
+  servlet:
+    context-path: /api
+    application-display-name: blog-search-api
 
+spring:
+  application:
+    name: blog-search-api
