--- a/blog-search-api/build.gradle
+++ b/blog-search-api/build.gradle
@@ -4,11 +4,16 @@ bootJar {
 
 ext {
     set('testcontainersVersion', "1.17.6")
+    set('springCloudVersion', "2022.0.1")
 }
 
 dependencies {
     implementation project(':blog-search-common')
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.testcontainers:junit-jupiter'
 }
@@ -16,5 +21,6 @@ dependencies {
 dependencyManagement {
     imports {
         mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
