--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,10 @@ server:
 spring:
   application:
     name: blog-search-api
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 feign:
   url:
