feat: test container 적용 및 redis 를 사용한 검색어 rank 조회 테스트 코드 작성

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,7 +19,7 @@ feign:
     prefix: "https://dapi.kakao.com"
   api:
     key:
-      kakao: "a6e103182d0df70ff2689ba5d4b67ee3"
+      kakao: a6e103182d0df70ff2689ba5d4b67ee3
   client:
     config:
       kakaoFeignClient:
